--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!------------------ Hero Section ---------------->
     <section class="hero-section">
         <div class="container">
-            <p class="hero-tagline-small">Lorem ipsum dolor sit amet consectetur.</p>
+            <p class="hero-tagline-small">Photospotter – Your Adventures. Shared. Discovered.</p>
             <h1 class="hero-title">Discover and Dine <br> with the PhotoSpotters App</h1>
             <p class="hero-subtitle">Connecting you to best of the best!</p>
 
